# EE_hack

./: README.md  REAL_WORLD_POINTING.md  TEMPLATE.md  launch_pose.sh  meta-entry.json  meta.json  ros2_pose_node.py  template.json  wendy.json
Erkka/: ros2_pose_node.py
bridge/: Dockerfile  app.py  compressedimage.py  cyclonedds.xml  posestamped.py
camera/: Dockerfile
control/: Dockerfile  app.py  requirements.txt
go2_ros2_sim_py/: README.md  RUNNING.md  SIM_TO_REAL.md
go2_ros2_sim_py/gazebo_sim/config/: nav2_params_real.yaml  robots.yaml  slam_real.yaml
go2_ros2_sim_py/quadropted_controller/: CMakeLists.txt  package.xml
nav2/: Dockerfile  MAP_NAV.md  cmd_vel_to_sport.py  entrypoint.sh  go2_odom.py  nav2.launch.py  nav2_mapped.launch.py  pointed_goal.py  server.py  wander.py
nav2/config/: nav2_params.yaml  nav2_params_mapped.yaml
nav2/maps/: map.pgm  map.yaml
recorder/: server.py
replay/: Dockerfile  README.md  entrypoint.sh  replay.py  server.py
ros2/: Dockerfile  cyclonedds.xml  ros_entrypoint.sh
scripts/: make-template.sh
sdk/: .dockerignore  Dockerfile  requirements.txt
sdk/src/go2_move_forward/: package.xml  setup.py
sdk/src/go2_move_forward/go2_move_forward/: move_forward_node.py
sit_stand/: Dockerfile  cyclonedds.xml  ros_entrypoint.sh  sit_stand.py
slam/: Dockerfile  entrypoint.sh  slam.launch.py
slam/config/: slam_toolbox.yaml
wander/: Dockerfile  entrypoint.sh  ground_nav.py  ogaboga.py  pipeline.launch.py  pointcloud_to_laserscan.yaml  roam_oa.py  scan_debug.py  server.py  wander.py
(+22 files in other folders)
