<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_move_forward</name>
  <version>0.0.1</version>
  <description>Simple ROS2 node to move Go2 forward one meter</description>
  <maintainer email="todo@example.com">User</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>unitree-sdk2-python</depend>

  <exec_depend>ros2launch</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>
</package>
